# afr-wifi-bluetooth-tester

./: CMakeLists.txt  Makefile  README.md  main.c
config_files/: FreeRTOSConfig.h  lwipopts.h
make_support/: afr.mk
